--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,5 @@
     <dimen name="post_card_height">128dp</dimen>
     <dimen name="text_padding">8dp</dimen>
     <dimen name="card_margin">8dp</dimen>
+    <dimen name="min_dialog_height">256dp</dimen>
 </resources>
